<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".view.LoginActivity">

    <ImageButton
        android:id="@+id/settings"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/settings_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao_login"
            android:layout_margin="40dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/login_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:hint="@string/user"/>
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:hint="@string/pass"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/forgot_pass"
                android:layout_alignParentEnd="true"/>
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/login_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/green"/>
                <TextView
                    android:id="@+id/create_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/dont_have_pass"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>