<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"/>
            <EditText
                android:id="@+id/name_et"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/name"
                android:padding="@dimen/padding_default"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/user_et"
                android:layout_marginTop="@dimen/margin_edit_text_register"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/user"
                android:padding="@dimen/padding_default"
                android:textColorHint="@color/black" />
            <EditText
                android:id="@+id/pass_et"
                android:layout_marginTop="@dimen/margin_edit_text_register"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/padding_default"
                android:textColorHint="@color/black" />
            <EditText
                android:id="@+id/confirm_pass_et"
                android:layout_marginTop="@dimen/margin_edit_text_register"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/pass_confirm"
                android:inputType="textPassword"
                android:padding="@dimen/padding_default"
                android:textColorHint="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/birth_et"
                    android:layout_marginTop="@dimen/margin_edit_text_register"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginRight="5dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:inputType="date"
                    android:hint="@string/birth_date"
                    android:padding="@dimen/padding_default"
                    android:textColorHint="@color/black" />
                <EditText
                    android:id="@+id/sex_et"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/margin_edit_text_register"
                    android:layout_marginRight="@dimen/margin_default"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/sex"
                    android:padding="@dimen/padding_default"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:elevation="10dp"
                android:padding="@dimen/padding_buttons"
                android:background="@color/blue_dark"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/facebook"/>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/facebook"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:padding="@dimen/padding_buttons"
                android:background="@color/red"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/google"/>
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/gmail"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_an_account"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:id="@+id/register_button"
                android:layout_marginTop="@dimen/padding_buttons"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/register_now"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>