<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/white"
    tools:context=".view.SettingsActivity">
    <!--one side right-->

    <LinearLayout
        android:id="@+id/nothing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sad"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textSize="23sp"
            android:textAlignment="center"
            android:text="@string/nothing_to_show"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/pdf_generator"
                android:padding="@dimen/padding_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/pdf_24"/>
            <ImageView
                android:id="@+id/img_generator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding_default"
                android:src="@drawable/image_24"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_default"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/order_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/order_by_name"/>
            <TextView
                android:id="@+id/order_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/order_by_birth_date"/>
        </LinearLayout>
    </LinearLayout>

    <com.tsuryo.swipeablerv.SwipeableRecyclerView
        android:id="@+id/rv"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rightBgColor="@color/red"
        app:rightImage="@drawable/delete_icon"
        app:rightText="Delete"
        app:textColor="@android:color/white"
        app:textSize="20sp" />
</LinearLayout>